[package]
name = "vlq"
version = "0.2.0"
authors = ["Tom Tromey <tom@tromey.com>"]

description = "Sourcemap-style VLQ encoder and decoder"
# Not done yet.
documentation = "https://github.com/tromey/vlq"
readme = "README.md"
keywords = ["vlq", "sourcemap"]
repository = "https://github.com/tromey/vlq"
license = "Apache-2.0/MIT"

[dependencies]
